<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewPreviewFood"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewPreview"
            android:layout_width="@dimen/width_image_preview"
            android:layout_height="@dimen/height_image_preview"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/image_preview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/plate" />

        <TextView
            android:id="@+id/textViewCalories"
            style="@style/сalories_style"
            app:layout_constraintStart_toEndOf="@+id/imageViewPreview"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDifficulty"
            style="@style/difficulty_style"
            android:text="@string/difficulty"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name_food"
            android:textSize="@dimen/text_size_name_food"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewHeadline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageViewPreview"
            app:layout_constraintTop_toTopOf="@id/textViewDifficulty" />

        <TextView
            android:id="@+id/textViewHeadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/text_headline"
            android:textSize="@dimen/text_size_headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewPreview"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        <TextView
            android:id="@+id/textViewLabelCarbos"
            android:text="@string/carbos"
            style="@style/label_style"
            app:layout_constraintStart_toEndOf="@+id/imageViewPreview"
            app:layout_constraintTop_toBottomOf="@+id/textViewHeadline"/>

        <TextView
            android:id="@+id/textViewLabelProteins"
            android:text="@string/proteins"
            style="@style/label_style"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelCarbos"
            app:layout_constraintTop_toBottomOf="@+id/textViewHeadline" />

        <TextView
            android:id="@+id/textViewLabelFats"
            android:text="@string/fats"
            style="@style/label_style"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelProteins"
            app:layout_constraintTop_toBottomOf="@+id/textViewHeadline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textViewCarbos"
            style="@style/carbos_proteins_fats_style"
            app:layout_constraintEnd_toEndOf="@+id/textViewLabelCarbos"
            app:layout_constraintStart_toStartOf="@+id/textViewLabelCarbos"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelCarbos" />

        <TextView
            android:id="@+id/textViewProteins"
            style="@style/carbos_proteins_fats_style"
            app:layout_constraintEnd_toEndOf="@+id/textViewLabelProteins"
            app:layout_constraintStart_toStartOf="@+id/textViewLabelProteins"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelProteins" />

        <TextView
            android:id="@+id/textViewFats"
            style="@style/carbos_proteins_fats_style"
            app:layout_constraintEnd_toEndOf="@+id/textViewLabelFats"
            app:layout_constraintStart_toStartOf="@+id/textViewLabelFats"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelFats" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>